argocd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: argocd.rois-theorem.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: argocd-server
          servicePort: https

  tls:
  - hosts:
    - argocd.rois-theorem.com
    secretName: argocd-secret # do not change, this is provided by Argo CD
